tests/fixtures/valid/section-nesting-w-classic-markers/section-nesting-6.yini
^ Section1
    ^^ Section11
        ^^^ Section111
        value = 111
^ Section2
value = 2
    ^^ Section21
        ^^^ Section211
        value = 211
